Corrected white space between objects in form

--- a/styles/style.scss
+++ b/styles/style.scss
@@ -67,26 +67,27 @@ body {
             display: grid;
             width: 80vw;
             font-family: 'Helvetica', sans-serif;
-            legend {
-                color: $dfds-color-gray4;
-                font-family: 'DFDSBold', sans-serif;
-                font-size: 2em;
-                padding-top: 2em;
-                margin-top: 1em;
-            }
             fieldset {
                 display: grid;
                 background-color: $dfds-color-gray-4;
                 border: none;
-                padding: 4em;
+                padding: 2em 3em;
+                legend {
+                    color: $dfds-color-gray4;
+                    font-family: 'DFDSBold', sans-serif;
+                    font-size: 2em;
+                    padding-top: 2em;
+                    margin-top: 0.3em;
+                }
                 label {
                     margin-bottom: 0.2em;
                 }
                 input {
                     font-size: 12pt;
-                    margin: 0 0 1em 0;
+                    margin-bottom: 1em;
                     border: none;
-                    padding: 1em 1em;
+                    width: 100%;
+                    height: 3em;
                     &:nth-of-type(3) {
                         margin-bottom: 0.5em;
                     }
